# linear-dag

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  benchmark.py  hatch_build.py  infer_linarg_function.ipynb  mkdocs.yml  optimization_opportunities.md  pyproject.toml  tmp
MATLAB/: BLUP_exact.m  BLUP_fast.m  ProjectionToIndices.m  find_recombinations.m  infer_linarg.m  infer_linarg_local.m  linarg_1kg_script_013124.m  linarg_leftmul.m  linarg_rightmul.m  readMatrixMarket.m  read_linarg.m  write_linarg.m
c/: benchmark_umfpack.c
docs/: cli.md  contributing.md  index.md  install.md  quickstart.md
docs/_mkdocstrings/python/material/: children.html.jinja
docs/api/: assoc.md
docs/design-plans/: 2026-02-13-cli-error-ux-hardening.md  2026-02-13-cli-invalid-input-tests.md  2026-02-13-cli-logging-unification-pass2.md  2026-02-13-cli-logging-unification.md  2026-02-13-test-organization-and-h5-fixtures.md  2026-02-17-core-from-hdf5-constructor-unification.md
docs/implementation-plans/2026-02-12-cli-code-review-remediation/: README.md  phase_01.md
docs/implementation-plans/2026-02-12-docstring-contract-pass/: README.md  phase_01.md
docs/implementation-plans/2026-02-12-src-code-review/: README.md  phase_01.md  phase_02.md  phase_03.md  phase_04.md
docs/implementation-plans/2026-02-13-cli-error-ux-hardening/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  test-requirements.md
docs/implementation-plans/2026-02-13-cli-logging-unification/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  test-requirements.md
docs/site/: cli.md  contributing.md  faq.md  index.md  install.md  license.md  python-api.md  quickstart.md
docs/site/api/: assoc.md  heritability.md  linear_arg.md  parallel_ops.md
docs/test-plans/: 2026-02-17-cli-argparse-modularization.md  2026-02-17-core-from-hdf5-constructor-unification.md
dx_scripts/: run_get_mat_partition.sh  run_infer_brick_graph_partition.sh  run_merge_brick_graphs.sh  submit_job_get_mat_partition.sh  submit_job_infer_brick_graph_partition.sh
dx_scripts/single_partition/: run_infer_brick_graph_partition.sh  run_merge_brick_graphs.sh  submit_job_get_mat_partition.sh  submit_job_merge_brick_graphs.sh
dx_scripts/whole_chromosome/: partition_chromosome.py  run_get_geno_partition.sh  run_infer_brick_graph_partition.sh  run_merge_brick_graphs.sh  run_partition_chromosome.sh  submit_job_get_geno_partition.sh  submit_job_infer_brick_graph_partition.sh  submit_job_merge_brick_graphs.sh  submit_partition_chromosome.sh
dx_scripts/whole_genome/: partition_chromosome.py  run_add_individual_nodes.sh  run_forward_backward.sh  run_get_geno_partition.sh  run_get_geno_partition_chrX.sh  run_get_geno_partition_maf_0.01.sh  run_infer_brick_graph_partition.sh  run_merge_brick_graphs.sh  run_partition_chromosome.sh  run_reduction_union_recom.sh  submit_job_add_individual_nodes.sh  submit_job_forward_backward.sh  submit_job_get_geno_chrX.sh  submit_job_get_geno_partition.sh  submit_job_get_geno_partition_maf_0.01.sh  submit_job_infer_brick_graph_partition.sh  submit_job_merge_brick_graphs.sh  submit_job_partition_chromosome.sh  submit_job_reduction_union_recom.sh
julia/: InstallDependencies.jl  LinearARG.jl  benchmark_script.jl
notebooks/: 1kg_072324.ipynb  simple_simulation.ipynb
notebooks/old/: test_linarg_notebook.ipynb
scripts/: debug_indexing.py  gwas.py  test_blup.py  test_rhe.py
src/: create_trios.py  setup.py  test.py  test_list.py  trios.pyx
src/association/: heritability.py  run_heritability_simulation.py  simulation.py
src/linear_dag/: __init__.py  add_sample.py  bed_io.py  brick_graph.pyx  brick_graph_py.py  cli.py  core.py  data_structures.pxd  data_structures.pyx  dna_nexus.py  genotype.py  genotype_processing.py  graph.pyx  linarg.py  linarg_workflow.py  linear_arg_inference.py  lineararg.py  memory_logger.py  one_summed.py  one_summed_cy.pyx  partition_merge.py  pathsumdag.py  pathsumdag_nx.py  pipeline.py  recombination.pyx  recombinations.py  reduction_union.pyx  sample_info.py  setup.py  simple_simulation.ipynb  simulate.py  solve.html  solve.pyx  trios.html  trios.pyx  utils.py  variant_info.py
src/linear_dag/association/: AGENTS.md  __init__.py  blup.py  compute_BLUP.py  gwas.py  heritability.py  ld.py  prs.py  prs_shm.py  run_heritability_simulation.py  simulation.py  structure.py  util.py
src/linear_dag/core/: AGENTS.md  CLAUDE.md  __init__.py  add_sample.py  brick_graph.pyx  data_structures.pxd  data_structures.pyx  digraph.pxd  digraph.pyx  genotype.py  grm_parallel.py  linear_arg_inference.py  lineararg.py  one_summed_cy.pyx  online.pyx  operators.py  parallel_processing.py  partition_merge.py  partition_merge.pyx  recombination.pxd  recombination.pyx  sample_info.py  solve.pyx  tree.pyx
src/linear_dag/structure/: AGENTS.md  __init__.py  infer.py
tests/: AGENTS.md  INTEGRATION_REHOMING_NOTES.md  README.md  __init__.py  conftest.py  create_trios.py  test_association.py  test_bed_filtering.py  test_cli.py  test_docstring_admonitions.py  test_fixture_primitives.py  test_grm.py  test_gwas.py  test_heap.py  test_ld.py  test_linarg.py  test_lineararg.py  test_list.py  test_memory_logger.py  test_multi_step_compress.py  test_parallel_processing.py  test_partition_merge.py  test_pipeline_logging.py  test_rhe.py  test_simulate.py  test_solve.py  test_structure.py  test_trios.py
tests/association/: __init__.py  test_association.py  test_ld.py  test_rhe.py
tests/cli/: DEFERRED_INTEGRATION_CASES.md  test_cli.py
tests/core/: test_bed_filtering.py  test_lineararg.py  test_parallel_processing.py
tests/helpers/: __init__.py  linarg_fixtures.py
tests/structure/: test_structure.py
tests/testdata/: 1kg_small.vcf  1kg_small.vcf.gz.tbi  phenotypes_50.tsv  step0.txt  test_chr21_50.h5  tiny.ma.h5  tiny.ma.vcf.gz.tbi
tests/testdata/kodama/: job_metadata.parquet
tests/testdata/kodama/forward_backward_graphs/: 0_chr1:10177-10178_backward_graph.h5  0_chr1:10177-10178_forward_graph.h5
tests/testdata/kodama/genotype_matrices/: 0_chr1:10177-10178.h5  1_chr1:10179-10180.h5
(+2 files in other folders)
